--- a/Views/Shared/_UserPartial.cshtml
+++ b/Views/Shared/_UserPartial.cshtml
@@ -7,11 +7,11 @@
     @if (SignInManager.IsSignedIn(User)) {
         @await Component.InvokeAsync("Cart")
         <div class="btn dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="images/avatar.jpg" width="30" alt="User" class="rounded" />
+            <img src="@Url.Action("GetImage", "Image")" width="30" alt="User" class="rounded" />
         </div>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <div class="dropdown-item-text">
-            <img src="images/avatar.jpg" width="50" alt="User" class="rounded" />
+                <img src="@Url.Action("GetImage", "Image")" width="50" alt="User" class="rounded" />
             @User.Identity.Name
         </div>
         <div class="dropdown-divider"></div>
