--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WEB_053502_Selhanovich.styles.css" asp-append-version="true" />
 </head>
+<!--span class="badge badge-light"-->
 <body>
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark ">
-                <a class="navbar-brand" href="#">WebLabsV06<span class="badge badge-light">3</span></a>
+                <a class="navbar-brand" href="#">WebLabsV06</a>
                 @await Component.InvokeAsync("Menu")
                 <partial name="_UserPartial" />
 
