--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WEB_053502_Selhanovich
 @using WEB_053502_Selhanovich.Models
+@using WEB_053502_Selhanovich.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
