--- a/Views/Dish/_ListItemPartial.cshtml
+++ b/Views/Dish/_ListItemPartial.cshtml
@@ -3,7 +3,7 @@
     var returnUrl = request.Path + request.QueryString.ToUriComponent();
 }
 @{
-    <div class="card">
+    <div class="card col" >
         <div class="card-body">
             <img src="~/images/@(Model.ImageName + '.' + Model.MimeType)" class="card-img-top" />
             <h4 class="card-title">@Model.Name</h4>
