--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using WEB_053502_Selhanovich.Models
 @using WEB_053502_Selhanovich.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper WEB_053502_Selhanovich.TagHelpers.*, WEB_053502_Selhanovich
