--- a/Views/Dish/_ListPartial.cshtml
+++ b/Views/Dish/_ListPartial.cshtml
@@ -20,4 +20,26 @@
        page-total="@(((ListViewModel<Dish>)Model).TotalNumberOfPages)"
        action="Index"
        controller="Dish"
-       group-id="@currentCategory"></pager>
+       group-id="@currentCategory" ></pager>
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            // подписать кнопки пейджера на событие click
+            $(".page-link").click(function (e) {
+                e.preventDefault();
+                // получить адрес
+                var uri = this.attributes["href"].value;
+                // отправить асинхронный запрос и поместить ответ
+                // в контейнер с id="list"
+                $("#list").load(uri);
+                // снять выделение с кнопки
+                $(".active").removeClass("active disabled");
+                // выделить текущую кнопку
+                $(this).parent().addClass("active");
+                // изменить адрес в адресной строке браузера
+                history.pushState(null, null, uri);
+            });
+        });
+    </script>
+}
