Lab6 is almost ready

--- a/Views/Shared/_UserPartial.cshtml
+++ b/Views/Shared/_UserPartial.cshtml
@@ -29,3 +29,10 @@
         </div>
     }
 </div>
+
+@section Scripts{
+    <script>
+        debugger;
+        $("img").fadeOut().show(300).slideUp().slideToggle();
+    </script>
+}
