--- a/Views/Dish/Index.cshtml
+++ b/Views/Dish/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Меню";
-    var categories = ViewData["Categories"] as IEnumerable<DishCategory>;
+    var categories = ViewData["DishCategories"] as IEnumerable<DishCategory>;
     int currentCategory = (int)ViewData["CurrentCategory"];
     var text = currentCategory != 0
     ? categories
@@ -14,7 +14,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<div class="container">
+<div class="container" id="list">
     <div class="col-2">
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,3 +31,35 @@
     </div>
     <partial name="_ListPartial" model="@Model" />
 </div>
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+                    console.log("On click")
+            // подписать кнопки пейджера на событие click
+            $(".pager").click(function (e) {
+                log.console("in onclick")
+                debugger;
+                e.preventDefault();
+                // получить адрес
+                var uri = this.attributes["href"].value;
+                // отправить асинхронный запрос и поместить ответ
+                // в контейнер с id="list"
+                $("#list").load(uri);
+                // снять выделение с кнопки
+                $(".active").removeClass("active disabled");
+                // выделить текущую кнопку
+                $(this).parent().addClass("active");
+                // изменить адрес в адресной строке браузера
+                history.pushState(null, null, uri);
+            });
+        });
+    </script>
+    <script>
+        $(".pager")
+            .click(function () {
+                console.log("wtrrbrrncuynr")
+                $("#list").load("_ListPartialggg.cshtml");
+            });
+    </script>
+}
