--- a/Views/Dish/_ListItemPartial.cshtml
+++ b/Views/Dish/_ListItemPartial.cshtml
@@ -4,7 +4,7 @@
 }
 @{
     <div class="card col" >
-        <div class="card-body">
+        
             <img src="~/images/@(Model.ImageName + '.' + Model.MimeType)" class="card-img-top" />
             <h4 class="card-title">@Model.Name</h4>
             <p class="card-text">@Model.Description</p>
@@ -16,6 +16,7 @@
            class="btn btn-primary">
                 <i class="fa fa-shopping-cart"></i> В корзину
             </a>
-        </div>
+
     </div>
+    //        <div class="card-body"></div>
 }
