Simple CRUD was added

--- a/Views/Dish/_ListItemPartial.cshtml
+++ b/Views/Dish/_ListItemPartial.cshtml
@@ -4,8 +4,8 @@
 }
 @{
     <div class="card col" >
-        
-            <img src="~/images/@(Model.ImageName + '.' + Model.MimeType)" class="card-img-top" />
+
+        <img src="~/images/@(Model.ImageName + '.' + Model.MimeType)" class="card-img-top" width="600" height="350" />
             <h4 class="card-title">@Model.Name</h4>
             <p class="card-text">@Model.Description</p>
             <h5 class=«card-subtitle badge">@Model.Price руб.</h5>
