--- a/Views/Dish/Index.cshtml
+++ b/Views/Dish/Index.cshtml
@@ -58,8 +58,7 @@
     <script>
         $(".pager")
             .click(function () {
-                console.log("wtrrbrrncuynr")
-                $("#list").load("_ListPartialggg.cshtml");
+                $("#list").load("_ListPartial.cshtml");
             });
     </script>
 }
