--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
             </nav>
         </div>
     </header>
-    <main class="container">
+    <main class="container pb-5">
         @RenderBody()
     </main>
-    <footer>
+    <footer style="position:relative;margin-bottom: -150px;height:150px;">
         <div class="container">
             <div class="navbar navbar-dark navbar-expand-md ">
                 <div class="navbar-nav ms-auto">
