--- a/Areas/Admin/Pages/Delete.cshtml
+++ b/Areas/Admin/Pages/Delete.cshtml
@@ -11,6 +11,7 @@
 <div>
     <h4>Dish</h4>
     <hr />
+    <img src="~/images/@(Model.Dish.ImageName + '.' + Model.Dish.MimeType)" width="350" height="250" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Dish.Name)
@@ -25,10 +26,10 @@
             @Html.DisplayFor(model => model.Dish.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dish.CategoryId)
+            @Html.DisplayNameFor(model => model.DishCategory.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dish.CategoryId)
+            @Html.DisplayFor(model => model.DishCategory.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Dish.Price)
@@ -52,7 +53,9 @@
     
     <form method="post">
         <input type="hidden" asp-for="Dish.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index">
+            <img src="~/images/left-arrow.png" width="30" height="30" />
+        </a>
     </form>
 </div>
