--- a/Areas/Admin/Pages/Details.cshtml
+++ b/Areas/Admin/Pages/Details.cshtml
@@ -10,6 +10,7 @@
 <div>
     <h4>Dish</h4>
     <hr />
+    <img src="~/images/@(Model.Dish.ImageName + '.' + Model.Dish.MimeType)" width="350" height="250" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Dish.Name)
@@ -24,10 +25,10 @@
             @Html.DisplayFor(model => model.Dish.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dish.CategoryId)
+            @Html.DisplayNameFor(model => model.DishCategory.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dish.CategoryId)
+            @Html.DisplayFor(model => model.DishCategory.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Dish.Price)
@@ -50,6 +51,10 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Dish?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Dish?.Id">
+        <img src="~/images/edit.png" width="30" height="30" />
+    </a>
+    <a asp-page="./Index">
+        <img src="~/images/left-arrow.png" width="30" height="30" />
+    </a>
 </div>
