--- a/Areas/Admin/Pages/Edit.cshtml
+++ b/Areas/Admin/Pages/Edit.cshtml
@@ -11,9 +11,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Dish.Id" />
+            <img width="350" height="250" id="output" src="~/images/@(Model.Dish.ImageName + '.' + Model.Dish.MimeType)" />
             <div class="form-group">
                 <label asp-for="Dish.Name" class="control-label"></label>
                 <input asp-for="Dish.Name" class="form-control" />
@@ -25,24 +26,17 @@
                 <span asp-validation-for="Dish.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Dish.CategoryId" class="control-label"></label>
-                <input asp-for="Dish.CategoryId" class="form-control" />
-                <span asp-validation-for="Dish.CategoryId" class="text-danger"></span>
+                <label asp-for="DishCategory.Name" class="control-label"></label>
+                <input asp-for="DishCategory.Name" class="form-control" />
+                <span asp-validation-for="DishCategory.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dish.Price" class="control-label"></label>
                 <input asp-for="Dish.Price" class="form-control" />
                 <span asp-validation-for="Dish.Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Dish.ImageName" class="control-label"></label>
-                <input asp-for="Dish.ImageName" class="form-control" />
-                <span asp-validation-for="Dish.ImageName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Dish.MimeType" class="control-label"></label>
-                <input asp-for="Dish.MimeType" class="form-control" />
-                <span asp-validation-for="Dish.MimeType" class="text-danger"></span>
+            <div class="custom-file">
+                <input asp-for="FormFile" type="file" class="custom-file-input" onchange="loadFile(event)">
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -52,6 +46,22 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">
+        <img src="~/images/left-arrow.png" width="30" height="30" />
+    </a>
 </div>
 
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            bsCustomFileInput.init()
+        });
+    </script>
+
+    <script>
+        var loadFile = function (event) {
+            var image = document.getElementById('output');
+            image.src = URL.createObjectURL(event.target.files[0]);
+        };
+    </script>
+}
