--- a/Views/Shared/Components/Cart/Default.cshtml
+++ b/Views/Shared/Components/Cart/Default.cshtml
@@ -1,3 +1,3 @@
 ﻿<a class="navbar-text ms-auto" asp-controller="Cart" asp-action="Index">
-    00,0 руб <i class="fas fa-shopping-cart nav-color"></i> (0)
+    @Model.TotalPrice руб <i class="fas fa-shopping-cart nav-color"></i> (@Model.Count)
 </a>
