Roles was added

--- a/Views/Dish/_ListItemPartial.cshtml
+++ b/Views/Dish/_ListItemPartial.cshtml
@@ -14,9 +14,8 @@
            asp-route-id="@Model.Id"
            asp-route-returnUrl="@returnUrl"
            class="btn btn-primary">
-                <i class="fa fa-shopping-cart"></i> В корзину
+                <i class="fa fa-shopping-cart"></i> To cart
             </a>
 
     </div>
-    //        <div class="card-body"></div>
 }
