--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <main class="container pb-5">
         @RenderBody()
     </main>
-    <footer style="position:relative;margin-bottom: -150px;height:150px;">
+    <footer >
         <div class="container">
             <div class="navbar navbar-dark navbar-expand-md ">
                 <div class="navbar-nav ms-auto">
